<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CD Delivery App</string>
    <string name="action_settings">Settings</string>
    <string name="address">Address</string>
    <string name="town">Town</string>
    <string name="apt">Apt #</string>
    <string name="phone_number">Phone</string>
    <string name="price">Price</string>
    <string name="amount_given">Amount Given</string>
    <string name="credit_card">Credit Card</string>
    

</resources>