<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:hint="7718 Bergenline Ave" >
		
        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvTown"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:text="@string/town"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvApartmentNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apt"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/etTown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="North Bergen"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etApartmentNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_given"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
		android:weightSum="99">
        <EditText
            android:id="@+id/etPrice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="20.59"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etAmountGiven"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="25.00"
            android:inputType="numberDecimal" />

        <CheckBox
            android:id="@+id/cbPaymentType"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/credit_card" />
                
    </LinearLayout>

    

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="201-869-4900" />

    <TextView
        android:id="@+id/tvNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Notes"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/bAddEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Entry" />

    <Button
        android:id="@+id/bSQLView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Entries" />

</LinearLayout>